
===================
Restlet changes log  
===================

@version-full@ (@release-date@)
 - Fixed potential NPE exceptions in the equals() methods of many metadata classes.
 - When build its pattern, the HostRouter now adds case insensitive flags for scheme names and domain names, strictly following the URI specification. Bug reported by Jim.
 - Ensured that Reference normalization, scheme name setting and host name setting use lower case according to URI specification.
 - Added new FAQ entry on "What are the underlying concepts?" and reorganized the questions a little.
 - Updated FreeMarker to version 2.3.8.
 - Updated Simple framework to version 3.1.3.
 - Updated Jetty 6 to version 6.0.0 RC0.
 - Updated JUnit to version 4.1.
 - Updated JavaMail to version 1.4.
 - Updated SLF4J to version 1.0.2.
 - Added Preference.toString() implementation based on patch submitted by Chris Winters.
 - Renamed Filter.attach/detach to get/setTarget. Users won't assume that multiple targets can be attached, also the target can be looked up.
 - Removed nextHandle() method from Handler and AbstractHandler. Didn't bring much value.
 - Renamed RestletContainer.attach/detach into get/setRoot. 
 - Fixed potential NPE in Reference.setHostName().
 - Added org.restlet.data.ScorerList implementing List<Scorer>.
 - Renamed Router.getOptions() to getScorers() and changed the result type from List<Scorer> to ScorerList.
 - Removed Router.attach() methods and added equivalent add() methods to ScorerList.
 - Removed Router.detach() method. Use the getOptions().remove() methods instead.
 - Moved some routing logic from DefaultRouter to ScorerList, see new getFirst(), getLast(), getBest(), getNext() and getRandom() methods.
 - Changed Preference.parameters type from List<Parameter> to ParameterList and adjusted related classes.
 - Added DefaultRouter.customFind() method as an easy hook for the RouteMode.CUSTOM routing mode.